--- a/index.html
+++ b/index.html
@@ -18,6 +18,46 @@
         <h2>Current time and date:</h2>
         <p class="fs-4" id="date-container"></p>
     </header>
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <div class="card mb-5">
+                        <div class="card-header bg-dark text-light fw-bold">
+                            Instructions
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">Click the button below to open a form and provide information for the
+                                following:</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Project Name</li>
+                            <li class="list-group-item">Project Type</li>
+                            <li class="list-group-item">Due Date</li>
+                        </ul>
+                        <div class="card-footer">
+                            <button class="btn btn-dark btn-block w-100">Add Project</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <table class="table table-custom">
+                        <thead class="text-light">
+                            <tr>
+                                <th scope="col">Name</th>
+                                <th scope="col">Type</th>
+                                <th scope="col">Due Date</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- TODO: Render projects... -->
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+        </div>
+    </main>
 
 
     <!-- scripts -->
