--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                             <li class="list-group-item">Due Date</li>
                         </ul>
                         <div class="card-footer">
-                            <button class="btn btn-dark btn-block w-100">Add Project</button>
+                            <button class="btn btn-dark btn-block w-100" data-bs-toggle="modal"
+                                data-bs-target="#project-form-modal">Add Project</button>
                         </div>
                     </div>
                 </div>
@@ -59,6 +60,54 @@
         </div>
     </main>
 
+    <!-- project form modal  -->
+    <div class="modal fade" id="project-form-modal" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form>
+                    <div class="modal-header bg-dark text-light">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Add a new project</h1>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="mb-3">
+                            <label for="project-name" class="form-label">Project Name</label>
+                            <input type="text" name="project-name" class="form-control" id="project-name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="project-type" class="form-label">Project Type</label>
+                            <select id="project-type" name="project-type" class="form-select" required>
+                                <option value="Web Application (Front End)">
+                                  Web Application (Front End)
+                                </option>
+                                <option value="Web Application (Back End)">
+                                  Web Application (Back End)
+                                </option>
+                                <option value="Web Application (Full Stack)">
+                                  Web Application (Full Stack)
+                                </option>
+                                <option value="Mobile Application">Mobile Application</option>
+                                <option value="Print Campaign">Print Campaign</option>
+                                <option value="Digital Marketing Campaign">
+                                  Digital Marketing Campaign
+                                </option>
+                              </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="project-due-date" class="form-label">Due Date</label>
+                            <input type="date" class="form-control" name="project-due-date" id="project-due-date" required>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-dark" id="project-form-submit">Add Project</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
