working app, modal form, project render from local storage

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <th scope="col">Due Date</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="project-table-body">
                             <!-- TODO: Render projects... -->
                         </tbody>
                     </table>
@@ -65,7 +65,7 @@
         aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <form>
+                <form id="project-form">
                     <div class="modal-header bg-dark text-light">
                         <h1 class="modal-title fs-5" id="exampleModalLabel">Add a new project</h1>
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
